fix: ts-node dependencies
